# trade-order-bridge

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
deploy/ib-gateway/: .env.example  README.md  docker-compose.yml
deploy/nginx/: trade-order-bridge.conf
tests/: test_webhook_flow.py
trade_order_bridge/: broker.py  config.py  database.py  deps.py  execution.py  logging_utils.py  main.py  models.py  queue_worker.py  rate_limit.py  schemas.py  security.py  services.py
