[project]
name = "trade-order-bridge"
version = "0.1.0"
description = "TradingView webhook to broker order bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.3.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
ibkr = [
  "ib_insync>=0.9.86",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trade_order_bridge*"]
